# Stock-price-prediction-based-on-news

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: admin.py  articles.py  clusters.py  dashboard.py  stocks.py  themes.py
apps/api/app/core/: config.py  enums.py  logging.py
apps/api/app/db/: init_db.py  session.py
apps/api/app/models/: __init__.py  domain.py
apps/api/app/repositories/: article.py  dashboard.py  ops.py  stock.py  theme.py
apps/api/app/schemas/: api.py
apps/api/app/services/: admin.py  articles.py  clusters.py  dashboard.py  evaluations.py  market_data.py  presenters.py  stock_universe.py  stocks.py  themes.py
apps/api/app/tasks/: celery_app.py  jobs.py
apps/api/app/tests/: conftest.py  test_api.py  test_pipeline.py
apps/api/newsalpha_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml/: pyproject.toml
ml/scripts/: evaluate_models.py  train_baselines.py
ml/src/newsalpha_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml/src/newsalpha_ml/datasets/: mock_data.py  us_spillover_data.py
ml/src/newsalpha_ml/evaluation/: evaluator.py  reports.json
ml/src/newsalpha_ml/features/: forecast_features.py  news_features.py  ranking_features.py  us_spillover_features.py
ml/src/newsalpha_ml/models/: forecast_model.py  ranking_model.py  relevance_model.py  theme_model.py  us_spillover_model.py
ml/src/newsalpha_ml/pipelines/: train_baselines.py
ml/tests/: test_feature_builders.py  test_us_spillover.py
(+77 files in other folders)
