[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsalpha-api"
version = "0.1.0"
description = "FastAPI backend for Korean stock news intelligence MVP"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "celery>=5.4.0",
  "deep-translator>=1.11.4",
  "fastapi>=0.115.0",
  "feedparser>=6.0.12",
  "finance-datareader>=0.9.110",
  "httpx>=0.28.0",
  "pgvector>=0.3.5",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "redis>=5.1.0",
  "sqlalchemy>=2.0.36",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
